fixed spacing issue ctp contact

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -469,9 +469,12 @@ legend {
   margin-right: 1em;
 }
 
+.hoe-weet-je {
+  padding-top: 34px;
+}
 .informeer {
   // min-height: 100px;
-  padding-top: 120px;
+  padding-top: 131px;
 }
 button[type="submit"].btn-left {
   margin-right: auto;
