--- a/_sass/mediaqueries.scss
+++ b/_sass/mediaqueries.scss
@@ -460,6 +460,29 @@
     }
   }
 }
+@media (min-width: 436px) {
+  .informeer {
+    padding-top: 115px;
+  }
+}
+
+@media (min-width: 488px) {
+  .informeer {
+    padding-top: 100px;
+  }
+}
+
+@media (min-width: 587px) {
+  .informeer {
+    padding-top: 83px;
+  }
+}
+
+@media (min-width: 587px) {
+  .informeer {
+    padding-top: 83px;
+  }
+}
 
 @media (min-width: 900px) {
   .innercontainer {
